--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/pizza.html">Pizza</a></li>
-      <li><a href="recipes/pastacotze.html">Pasta Cozze</a></li>
+      <li><a href="recipes/pasta-cozze.html">Pasta Cozze</a></li>
     </ul>
 </body>
 </html>
